Configuration tests have been added

--- a/app/windows/login.html
+++ b/app/windows/login.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row">
               <div class="col-sm-6 mx-auto">
-                  <form>
+                  <form method="POST" action="/">
                       <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" class="form-control form-control-sm" id="username" placeholder="Hit your username!">
@@ -42,8 +42,8 @@
                         <label class="form-check-label" for="saveUsername">Save my username after log in</label>
                       </div>
                       <div class="col right-buttons">
-                          <button type="submit" class="btn btn-success">Login</button>
-                          <button type="submit" class="btn btn-primary">Exit</button>
+                          <button type="button" class="btn btn-success">Login</button>
+                          <button type="button" class="btn btn-primary">Exit</button>
                       </div>
                       <div class="col bottom-align-text signin-text">
                           <h6>Don't you have an account? <a href="#">Create one!</a></h6>
