--- a/app/windows/login.html
+++ b/app/windows/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
-    <title>{{ title }}</title>
+    <title id="frameTitle">Pebutra, Your Personal Budget Tracker! | {{ lang.login }}</title>
   <style>
     .right-buttons {
       text-align: right;
@@ -15,11 +15,6 @@
     }
 
   </style>
-  <script src="/socket.io/socket.io.js"></script>
-  <script type="text/javascript">
-    let socket = io();
-  
-  </script>
   </head>
   <body>
       <div class="container">
@@ -30,23 +25,30 @@
               <div class="col-sm-6 mx-auto">
                   <form method="POST" action="/">
                       <div class="form-group">
-                        <label for="username">Username</label>
+                        <label for="username" id="lblUsername">Username</label>
                         <input type="text" class="form-control form-control-sm" id="username" placeholder="Hit your username!">
                       </div>
                       <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password" id="lblPassword">Password</label>
                         <input type="password" class="form-control form-control-sm" id="password" placeholder="Password">
+                      </div>
+                      <div class="form-group">
+                        <label for="language" id="systemLanguage">System Language</label>
+                        <select id="cmbLanguages" name="cmbLanguages" class="form-control">
+                          <option value="en">English</option>
+                          <option value="tr">Türkçe</option>
+                        </select>
                       </div>
                       <div class="form-check">
                         <input type="checkbox" checked="true" class="form-check-input" id="saveUsername">
-                        <label class="form-check-label" for="saveUsername">Save my username after log in</label>
+                        <label class="form-check-label" id="saveUsernameInfo" for="saveUsername">Save my username after log in</label>
                       </div>
                       <div class="col right-buttons">
-                          <button type="button" class="btn btn-success">Login</button>
-                          <button type="button" class="btn btn-primary">Exit</button>
+                          <button type="button" id="btnLogin" class="btn btn-success">Login</button>
+                          <button type="button" id="btnExit" class="btn btn-primary">Exit</button>
                       </div>
                       <div class="col bottom-align-text signin-text">
-                          <h6>Don't you have an account? <a href="#">Create one!</a></h6>
+                          <h6><span id="dontHaveAnAccount">Don't you have an account?</span> <a id="createAccount" href="#">Create one!</a></h6>
                       </div>
                     </form>
               </div>
@@ -55,5 +57,29 @@
     <script src="assets/js_libs/jquery-3.3.1.slim.min.js" ></script>
     <script src="assets/js_libs/popper.min.js"></script>
     <script src="assets/js_libs/bootstrap.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+      const socket = io();
+      
+      socket.on('setupLanguage', (lang) => {
+          $('#frameTitle').html(lang.loginPageTitle);
+          $('#lblUsername').html(lang.username);
+          $('#lblPassword').html(lang.password);
+          $('#systemLanguage').html(lang.systemLanguage);
+          $('#username').attr("placeholder", lang.username);
+          $('#password').attr("placeholder", lang.password);
+          $('#saveUsernameInfo').text(lang.saveUsername);
+          $('#btnLogin').text(lang.login);
+          $('#btnExit').text(lang.exit);
+          $('#dontHaveAnAccount').html(lang.dontHaveAnAccount);
+          $('#createAccount').text(lang.createYourOwnAccount);
+      });
+
+      $("#cmbLanguages").change(function() {
+        const newLanguage = $('#cmbLanguages').val();
+        socket.emit('languageChanged', newLanguage);
+    });
+    </script>
+  
   </body>
 </html>
