--- a/app/windows/login.html
+++ b/app/windows/login.html
@@ -36,6 +36,7 @@
             $('#dontHaveAnAccount').html(lang.dontHaveAnAccount);
             $('#createAccount').text(lang.createYourOwnAccount);
         });
+        
         $(document).ready(() => {
           $("#cmbLanguages").change(function() {
           const newLanguage = $('#cmbLanguages').val();
@@ -64,9 +65,10 @@
                       <div class="form-group">
                         <label for="language" id="systemLanguage">{{language.systemLanguage}}</label>
                         <select id="cmbLanguages" name="cmbLanguages" class="form-control">
-                          <option value="en">English</option>
+                         {{{ languageOptions }}}
+                          <!-- <option value="en">English</option>
                           <option value="tr">Türkçe</option>
-                        </select>
+                        --></select>
                       </div>
                       <div class="form-check">
                         <input type="checkbox" checked="true" class="form-check-input" id="saveUsername">
