Pebutra version info added to the login window

--- a/app/windows/login.html
+++ b/app/windows/login.html
@@ -10,6 +10,10 @@
       text-align: right;
     }
 
+    .center-text {
+      text-align: center;
+    }
+
     .signin-text {
       margin-top: 5%;
     }
@@ -87,11 +91,14 @@
                       <div class="col bottom-align-text signin-text">
                           <h6><span id="dontHaveAnAccount">{{language.dontHaveAnAccount}}</span> <a id="createAccount" href="#">{{language.createYourOwnAccount}}</a></h6>
                       </div>
+                      <div class="col bottom-align-text center-text">
+                        <h6 id="pebutraInfo">{{pebutraInfo}}</h6>
+                      </div>
                     </form>
               </div>
             </div> 
           </div>
-
+          
   
   </body>
 </html>
