Template variables added into language configuration file

--- a/app/windows/login.html
+++ b/app/windows/login.html
@@ -43,6 +43,7 @@
             $('#btnExit').text(lang.exit);
             $('#dontHaveAnAccount').html(lang.dontHaveAnAccount);
             $('#createAccount').text(lang.createYourOwnAccount);
+            $('#pebutraInfo').text(lang.pebutraInfo);
         });
 
           $("#cmbLanguages").change(() => {
@@ -92,7 +93,7 @@
                           <h6><span id="dontHaveAnAccount">{{language.dontHaveAnAccount}}</span> <a id="createAccount" href="#">{{language.createYourOwnAccount}}</a></h6>
                       </div>
                       <div class="col bottom-align-text center-text">
-                        <h6 id="pebutraInfo">{{pebutraInfo}}</h6>
+                        <h6 id="pebutraInfo">{{language.pebutraInfo}}</h6>
                       </div>
                     </form>
               </div>
