Converting JavaScript to TypeScript

--- a/windows/login.html
+++ b/windows/login.html
@@ -19,9 +19,9 @@
     }
 
   </style>
-      <script type="text/javascript"> window.$ = window.jQuery = require('jquery'); </script>
-      <script src="assets/js_libs/popper.min.js"></script>
-      <script src="assets/js_libs/bootstrap.min.js"></script>
+      <script src="assets/lib/jquery-3.3.1.slim.min.js"></script>
+      <script src="assets/lib/popper.min.js"></script>
+      <script src="assets/lib/bootstrap.min.js"></script>
       <script src="/socket.io/socket.io.js"></script>
       <script type="text/javascript">
         
@@ -142,7 +142,5 @@
               </div>
             </div> 
           </div>
-          
-  
   </body>
 </html>
